--- a/JavaScript/WordReversal.HTML
+++ b/JavaScript/WordReversal.HTML
@@ -19,16 +19,24 @@
     <!-- Java script to perform the word reversal -->
     <script>
         function reverseWords() {
-            const inputSentence = document.getElementById("inputSentence").value;
-            const words = inputSentence.split(" ");
-            const reversedWords = words.map(word => reverseWord(word));
-            const reversedSentence = reversedWords.join(" ");
-            document.getElementById("reversedOutput").textContent = reversedSentence;
-        }
+            var inputSentence = document.getElementById("inputSentence").value;
+            var words = inputSentence.split(" ");
+            var reversedWords = [];
 
-        // Function to reverse a single word
-        function reverseWord(word) {
-            return word.split("").reverse().join("");
+            // Taking each word in the sentence and reversing it
+            for (var i = 0; i < words.length; i++) {
+                var word = words[i];
+                var reversedWord = "";
+
+                for (var j = word.length - 1; j >= 0; j--) {
+                    reversedWord += word[j];
+                }
+
+                reversedWords.push(reversedWord);
+            }
+
+            var reversedSentence = reversedWords.join(" ");
+            document.getElementById("reversedOutput").textContent =  reversedSentence;
         }
     </script>
     
